Progress on vignette; some fixes to package code

--- a/Sweavetest/vignettes/Sweavetest.Rnw
+++ b/Sweavetest/vignettes/Sweavetest.Rnw
@@ -4,6 +4,8 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 
+test change
+
 \usepackage[authoryear,round,comma]{natbib}
 \bibliographystyle{apa}
 
