--- a/Sweavetest/vignettes/Sweavetest.Rnw
+++ b/Sweavetest/vignettes/Sweavetest.Rnw
@@ -4,7 +4,7 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 
-test change
+test change 2
 
 \usepackage[authoryear,round,comma]{natbib}
 \bibliographystyle{apa}
