--- a/Sweavetest/vignettes/Sweavetest.Rnw
+++ b/Sweavetest/vignettes/Sweavetest.Rnw
@@ -15,6 +15,7 @@
 <<>>=
 options(width=60)
 set.seed(18)
+install.packages("~/git/Sweavetest/Sweavetest",type="source",repos=NULL)
 library(Sweavetest)
 randomize <- TRUE
 testversion <- 1
@@ -63,7 +64,7 @@ useful.
 
 There are four main parts to the package, described in the following sections.  First, a
 number of functions are given to help an instructor prepare a test using Sweave \citep{Leisch2002}.
-These are described in section \ref{sec:preparing}.  At UWO, the students use Scantron brand 
+These are described in section \ref{sec:preparing}.  At UWO, the students use Scantron 
 mark-sense sheets to record answers on multiple-choice tests; section \ref{sec:reading}
 describes how these are handled in \pkg{Sweavetest}, producing grades for each student
 and merging them into existing class lists.
@@ -113,8 +114,8 @@ The supplied functions do the work of formatting the answers.   For example,
 The \verb!enumerate()! function produces
 an enumeration environment in \LaTeX.  The answers are displayed in a random order.  Earlier in the text, we've used
 \begin{verbatim}
-\newcommand{\Correct}{*}
-\renewcommand{\labelenumii}{(\Alph{enumii})}
+ \newcommand{\Correct}{*}
+ \renewcommand{\labelenumii}{(\Alph{enumii})}
 \end{verbatim}
 so that the correct answer is marked with an asterisk, and the answers are labelled with 
 capital letters.  (We wouldn't label the correct answer on the version of the test we give to 
@@ -125,11 +126,11 @@ above will be processed and displayed as
 \item Let $U \sim \Unif(0,1)$.  Set $X$ equal to 0 if $U > 0.3$, equal to 1 otherwise.  The
 distribution of $X$ is
 <<>>=
-enumerate("Binomial$(n=1, p=0.7)$", 
-      "Binomial$(n=1, p=0.3)$",
-      "Poisson$(\\mu = 0.3)$",
-      "Poisson$(\\mu = 0.7)$",
-      "Exponential$(\\lambda=0.3)$",
+enumerate("$\\Binom(n=1, p=0.7)$", 
+      "$\\Binom(n=1, p=0.3)$",
+      "$\\Poisson(\\mu = 0.3)$",
+      "$\\Poisson(\\mu = 0.7)$",
+      "$\\Exp(\\lambda=0.3)$",
       Correct=2)
 @
 \end{enumerate}
@@ -138,7 +139,7 @@ Besides \verb!enumerate()!, several other functions produce randomized answer li
 \verb!horiz()! function formats them horizontally on a single line.  The \verb!items()! function
 is like \verb!enumerate()!, but only the \LaTeX\ \verb!\items! part of the enumeration is output:
 it is assumed that the test writer has already entered \verb!\begin{enumerate}! or equivalent.
-The \verb!things()! function just randomizes the items it is given; the test writing needs to
+The \verb!things()! function just randomizes the items it is given; the test writer needs to
 enter the \verb!\item! values if necessary.
 
 The \pkg{Sweavetest} package also has special support for questions
@@ -237,7 +238,8 @@ also optionally defines \verb!\Marks!, which displays marks for a question in th
 margin, \verb!\thesection!, which suppresses section numbering, and \verb!\lowtilde!,
 which draws a tilde under a math symbol, similar to the convention used on a blackboard
 to indicate a vector.  By default, all macros are defined, but any of them
-may be suppressed by passing an argument to \verb!newCommands()!.  For example,
+may be suppressed by passing \verb!FALSE! to the corresponding argument to 
+\verb!newCommands()!.  For example,
 this document uses \verb!newCommands(thesection = FALSE)!, because section headings
 should not be overridden.
 
@@ -272,7 +274,8 @@ multiplechoice(1:10)
 
 A side effect of using the functions described in section \ref{sec:questions} is that information on the
 randomization is saved
-and is used to produce an answer key.  For example, the answer key from the questions
+and is used to produce an answer key.  (This information is also used in the 
+test analysis functions; see section \ref{sec:analysis}.) For example, the answer key from the questions
 above is requested via
 
 \noindent\verb!Answer key for version \Sexpr!\verb!{versioncodes[testversion]}:\\!
