--- a/Sweavetest/vignettes/Sweavetest.bib
+++ b/Sweavetest/vignettes/Sweavetest.bib
@@ -13,3 +13,12 @@
     booktitle = {Compstat 2002 - Proceedings in Computational Statistics},
     editors = {W. HŠrdle and B. Ršnz}
   }
+  
+@manual{pkg:odfWeave,
+  title = {{odfWeave}: Sweave Processing of {Open Document Format (ODF)} Files},
+  author = {Max Kuhn},
+  year = 2012,
+  note = {Contributions from Steve Weston, Nathan Coulter, Patrick Lenon and Zekai Otles.
+  R package version 0.8.1.},
+  url = {http://CRAN.R=projectorg/package=odfWeave}
+}
